<?xml version="1.0"?>
<package format="2">
  <name>package_verification</name>
  <version>0.0.1</version>

  <description>Package verification subsystem</description>

  <maintainer email="team@todo.com">Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>