<?xml version="1.0"?>
<package format="2">

  <name>slam_navigation</name>
  <version>0.0.1</version>

  <description>Smart Warehouse subsystem</description>

  <maintainer email="team@todo.com">Team</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>